--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "project",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
+  "scripts": {
+    "dev": "bun run --hot server/index.ts",
+    "start": "bun server/index.ts"
   },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "dependencies": {
+    "drizzle-orm": "^0.37.0",
+    "hono": "^4.6.3",
+    "postgres": "^3.4.5",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.29.0"
   }
 }
