--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "start": "bun server/index.ts"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.1",
+    "@lucia-auth/adapter-drizzle": "^1.1.0",
     "drizzle-orm": "^0.37.0",
     "hono": "^4.6.3",
+    "lucia": "^3.2.2",
     "postgres": "^3.4.5",
     "zod": "^3.23.8"
   },
