--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:14.1-apline
+    image: postgres:14.1-alpine
     restart: always
     environment:
       POSTGRES_PASSWORD: postgres
